src/corba/lex-yak/y.output

state 0
	$accept : _specification $end 

	xCONST  shift 12
	xENUM  shift 19
	xEXCEPTION  shift 13
	xINTERFACE  shift 21
	xMODULE  shift 16
	xSTRUCT  shift 17
	xTYPEDEF  shift 8
	xUNION  shift 18
	.  error

	interface_header  goto 20
	interface_dcl  goto 14
	forward_dcl  goto 15
	interface  goto 6
	definition  goto 2
	specification  goto 1
	enum_type  goto 11
	type_dcl  goto 3
	union_type  goto 10
	const_dcl  goto 4
	struct_type  goto 9
	except_dcl  goto 5
	module  goto 7

state 1
	$accept :  specification_$end 
	specification :  specification_definition 

	$end  accept
	xCONST  shift 12
	xENUM  shift 19
	xEXCEPTION  shift 13
	xINTERFACE  shift 21
	xMODULE  shift 16
	xSTRUCT  shift 17
	xTYPEDEF  shift 8
	xUNION  shift 18
	.  error

	interface_header  goto 20
	interface_dcl  goto 14
	forward_dcl  goto 15
	interface  goto 6
	definition  goto 22
	enum_type  goto 11
	type_dcl  goto 3
	union_type  goto 10
	const_dcl  goto 4
	struct_type  goto 9
	except_dcl  goto 5
	module  goto 7

state 2
	specification :  definition_    (1)

	.  reduce 1


state 3
	definition :  type_dcl_; 

	;  shift 23
	.  error


state 4
	definition :  const_dcl_; 

	;  shift 24
	.  error


state 5
	definition :  except_dcl_; 

	;  shift 25
	.  error


state 6
	definition :  interface_; 

	;  shift 26
	.  error


state 7
	definition :  module_; 

	;  shift 27
	.  error


state 8
	type_dcl :  xTYPEDEF_type_declarator 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xENUM  shift 19
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSEQUENCE  shift 58
	xSHORT  shift 65
	xSTRING  shift 59
	xSTRUCT  shift 17
	xUNSIGNED  shift 66
	xUNION  shift 18
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 32
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	enum_type  goto 37
	constr_type_spec  goto 31
	simple_type_spec  goto 30
	type_spec  goto 29
	scoped_name  goto 34
	string_type  goto 46
	union_type  goto 36
	struct_type  goto 35
	sequence_type  goto 45
	template_type_spec  goto 33
	type_declarator  goto 28

state 9
	type_dcl :  struct_type_    (71)

	.  reduce 71


state 10
	type_dcl :  union_type_    (72)

	.  reduce 72


state 11
	type_dcl :  enum_type_    (73)

	.  reduce 73


state 12
	const_dcl :  xCONST_const_type xIDENTIFIER = const_exp 

	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xFLOAT  shift 49
	xLONG  shift 64
	xSHORT  shift 65
	xSTRING  shift 59
	xUNSIGNED  shift 66
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 68
	floating_pt_type  goto 71
	char_type  goto 69
	boolean_type  goto 70
	scoped_name  goto 73
	const_type  goto 67
	string_type  goto 72

state 13
	except_dcl :  xEXCEPTION_xIDENTIFIER { } 
	except_dcl :  xEXCEPTION_xIDENTIFIER { member_list } 

	xIDENTIFIER  shift 74
	.  error


state 14
	interface :  interface_dcl_    (11)

	.  reduce 11


state 15
	interface :  forward_dcl_    (12)

	.  reduce 12


state 16
	module :  xMODULE_xIDENTIFIER { aux_11 } 

	xIDENTIFIER  shift 75
	.  error


state 17
	struct_type :  xSTRUCT_xIDENTIFIER { member_list } 

	xIDENTIFIER  shift 76
	.  error


state 18
	union_type :  xUNION_xIDENTIFIER xSWITCH ( switch_type_spec ) { switch_body } 

	xIDENTIFIER  shift 77
	.  error


state 19
	enum_type :  xENUM_xIDENTIFIER { aux_4 } 

	xIDENTIFIER  shift 78
	.  error


state 20
	interface_dcl :  interface_header_{ interface_body } 

	{  shift 79
	.  error


state 21
	forward_dcl :  xINTERFACE_xIDENTIFIER 
	interface_header :  xINTERFACE_xIDENTIFIER 
	interface_header :  xINTERFACE_xIDENTIFIER inheritance_spec 

	xIDENTIFIER  shift 80
	.  error


state 22
	specification :  specification definition_    (2)

	.  reduce 2


state 23
	definition :  type_dcl ;_    (3)

	.  reduce 3


state 24
	definition :  const_dcl ;_    (4)

	.  reduce 4


state 25
	definition :  except_dcl ;_    (5)

	.  reduce 5


state 26
	definition :  interface ;_    (6)

	.  reduce 6


state 27
	definition :  module ;_    (7)

	.  reduce 7


state 28
	type_dcl :  xTYPEDEF type_declarator_    (70)

	.  reduce 70


state 29
	type_declarator :  type_spec_declarators 

	xIDENTIFIER  shift 86
	.  error

	simple_declarator  goto 84
	declarator  goto 83
	declarators  goto 81
	aux_2  goto 82
	array_declarator  goto 87
	complex_declarator  goto 85

state 30
	type_spec :  simple_type_spec_    (75)

	.  reduce 75


state 31
	type_spec :  constr_type_spec_    (76)

	.  reduce 76


state 32
	simple_type_spec :  base_type_spec_    (77)

	.  reduce 77


state 33
	simple_type_spec :  template_type_spec_    (78)

	.  reduce 78


state 34
	scoped_name :  scoped_name_DOUBLE_COLON xIDENTIFIER 
	simple_type_spec :  scoped_name_    (79)

	DOUBLE_COLON  shift 88
	.  reduce 79


state 35
	constr_type_spec :  struct_type_    (89)

	.  reduce 89


state 36
	constr_type_spec :  union_type_    (90)

	.  reduce 90


state 37
	constr_type_spec :  enum_type_    (91)

	.  reduce 91


state 38
	base_type_spec :  floating_pt_type_    (80)

	.  reduce 80


state 39
	base_type_spec :  integer_type_    (81)

	.  reduce 81


state 40
	base_type_spec :  char_type_    (82)

	.  reduce 82


state 41
	base_type_spec :  boolean_type_    (83)

	.  reduce 83


state 42
	base_type_spec :  octet_type_    (84)

	.  reduce 84


state 43
	base_type_spec :  any_type_    (85)

	.  reduce 85


state 44
	base_type_spec :  object_type_    (86)

	.  reduce 86


state 45
	template_type_spec :  sequence_type_    (87)

	.  reduce 87


state 46
	template_type_spec :  string_type_    (88)

	.  reduce 88


state 47
	scoped_name :  xIDENTIFIER_    (27)

	.  reduce 27


state 48
	scoped_name :  DOUBLE_COLON_xIDENTIFIER 

	xIDENTIFIER  shift 89
	.  error


state 49
	floating_pt_type :  xFLOAT_    (99)

	.  reduce 99


state 50
	floating_pt_type :  xDOUBLE_    (100)

	.  reduce 100


state 51
	integer_type :  signed_int_    (101)

	.  reduce 101


state 52
	integer_type :  unsigned_int_    (102)

	.  reduce 102


state 53
	char_type :  xCHAR_    (111)

	.  reduce 111


state 54
	boolean_type :  xBOOLEAN_    (112)

	.  reduce 112


state 55
	octet_type :  xOCTET_    (113)

	.  reduce 113


state 56
	any_type :  xANY_    (114)

	.  reduce 114


state 57
	object_type :  xOBJECT_    (115)

	.  reduce 115


state 58
	sequence_type :  xSEQUENCE_< simple_type_spec , positive_int_const > 
	sequence_type :  xSEQUENCE_< simple_type_spec > 

	<  shift 90
	.  error


state 59
	string_type :  xSTRING_< positive_int_const > 
	string_type :  xSTRING_    (141)

	<  shift 91
	.  reduce 141


state 60
	signed_int :  signed_long_int_    (103)

	.  reduce 103


state 61
	signed_int :  signed_short_int_    (104)

	.  reduce 104


state 62
	unsigned_int :  unsigned_long_int_    (107)

	.  reduce 107


state 63
	unsigned_int :  unsigned_short_int_    (108)

	.  reduce 108


state 64
	signed_long_int :  xLONG_    (105)

	.  reduce 105


state 65
	signed_short_int :  xSHORT_    (106)

	.  reduce 106


state 66
	unsigned_long_int :  xUNSIGNED_xLONG 
	unsigned_short_int :  xUNSIGNED_xSHORT 

	xLONG  shift 92
	xSHORT  shift 93
	.  error


state 67
	const_dcl :  xCONST const_type_xIDENTIFIER = const_exp 

	xIDENTIFIER  shift 94
	.  error


state 68
	const_type :  integer_type_    (31)

	.  reduce 31


state 69
	const_type :  char_type_    (32)

	.  reduce 32


state 70
	const_type :  boolean_type_    (33)

	.  reduce 33


state 71
	const_type :  floating_pt_type_    (34)

	.  reduce 34


state 72
	const_type :  string_type_    (35)

	.  reduce 35


state 73
	scoped_name :  scoped_name_DOUBLE_COLON xIDENTIFIER 
	const_type :  scoped_name_    (36)

	DOUBLE_COLON  shift 88
	.  reduce 36


state 74
	except_dcl :  xEXCEPTION xIDENTIFIER_{ } 
	except_dcl :  xEXCEPTION xIDENTIFIER_{ member_list } 

	{  shift 95
	.  error


state 75
	module :  xMODULE xIDENTIFIER_{ aux_11 } 

	{  shift 96
	.  error


state 76
	struct_type :  xSTRUCT xIDENTIFIER_{ member_list } 

	{  shift 97
	.  error


state 77
	union_type :  xUNION xIDENTIFIER_xSWITCH ( switch_type_spec ) { switch_body } 

	xSWITCH  shift 98
	.  error


state 78
	enum_type :  xENUM xIDENTIFIER_{ aux_4 } 

	{  shift 99
	.  error


state 79
	interface_dcl :  interface_header {_interface_body } 
	interface_body : _    (17)

	.  reduce 17

	interface_body  goto 100

state 80
	forward_dcl :  xINTERFACE xIDENTIFIER_    (14)
	interface_header :  xINTERFACE xIDENTIFIER_    (15)
	interface_header :  xINTERFACE xIDENTIFIER_inheritance_spec 

	{  reduce 15
	:  shift 102
	.  reduce 14

	inheritance_spec  goto 101

state 81
	type_declarator :  type_spec declarators_    (74)

	.  reduce 74


state 82
	declarators :  aux_2_    (92)
	aux_2 :  aux_2_, declarator 

	,  shift 103
	.  reduce 92


state 83
	aux_2 :  declarator_    (93)

	.  reduce 93


state 84
	declarator :  simple_declarator_    (95)

	.  reduce 95


state 85
	declarator :  complex_declarator_    (96)

	.  reduce 96


state 86
	simple_declarator :  xIDENTIFIER_    (97)
	array_declarator :  xIDENTIFIER_aux_5 

	[  shift 106
	.  reduce 97

	aux_5  goto 104
	fixed_array_size  goto 105

state 87
	complex_declarator :  array_declarator_    (98)

	.  reduce 98


state 88
	scoped_name :  scoped_name DOUBLE_COLON_xIDENTIFIER 

	xIDENTIFIER  shift 107
	.  error


state 89
	scoped_name :  DOUBLE_COLON xIDENTIFIER_    (28)

	.  reduce 28


state 90
	sequence_type :  xSEQUENCE <_simple_type_spec , positive_int_const > 
	sequence_type :  xSEQUENCE <_simple_type_spec > 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSEQUENCE  shift 58
	xSHORT  shift 65
	xSTRING  shift 59
	xUNSIGNED  shift 66
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 32
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	simple_type_spec  goto 108
	scoped_name  goto 34
	string_type  goto 46
	sequence_type  goto 45
	template_type_spec  goto 33

state 91
	string_type :  xSTRING <_positive_int_const > 

	xFALSE  shift 132
	xTRUE  shift 131
	DOUBLE_COLON  shift 48
	FLOATING_PT_LITERAL  shift 129
	CHARACTER_LITERAL  shift 128
	STRING_LITERAL  shift 127
	INTEGER_LITERAL  shift 126
	xIDENTIFIER  shift 47
	-  shift 120
	+  shift 121
	~  shift 122
	(  shift 125
	.  error

	unary_operator  goto 118
	scoped_name  goto 123
	primary_expr  goto 119
	literal  goto 124
	const_exp  goto 110
	or_expr  goto 111
	xor_expr  goto 112
	and_expr  goto 113
	shift_expr  goto 114
	add_expr  goto 115
	mult_expr  goto 116
	unary_expr  goto 117
	positive_int_const  goto 109
	boolean_literal  goto 130

state 92
	unsigned_long_int :  xUNSIGNED xLONG_    (109)

	.  reduce 109


state 93
	unsigned_short_int :  xUNSIGNED xSHORT_    (110)

	.  reduce 110


state 94
	const_dcl :  xCONST const_type xIDENTIFIER_= const_exp 

	=  shift 133
	.  error


state 95
	except_dcl :  xEXCEPTION xIDENTIFIER {_} 
	except_dcl :  xEXCEPTION xIDENTIFIER {_member_list } 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xENUM  shift 19
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSEQUENCE  shift 58
	xSHORT  shift 65
	xSTRING  shift 59
	xSTRUCT  shift 17
	xUNSIGNED  shift 66
	xUNION  shift 18
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	}  shift 134
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 32
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	enum_type  goto 37
	constr_type_spec  goto 31
	simple_type_spec  goto 30
	type_spec  goto 137
	member  goto 136
	member_list  goto 135
	scoped_name  goto 34
	string_type  goto 46
	union_type  goto 36
	struct_type  goto 35
	sequence_type  goto 45
	template_type_spec  goto 33

state 96
	module :  xMODULE xIDENTIFIER {_aux_11 } 

	xCONST  shift 12
	xENUM  shift 19
	xEXCEPTION  shift 13
	xINTERFACE  shift 21
	xMODULE  shift 16
	xSTRUCT  shift 17
	xTYPEDEF  shift 8
	xUNION  shift 18
	.  error

	aux_11  goto 138
	interface_header  goto 20
	interface_dcl  goto 14
	forward_dcl  goto 15
	interface  goto 6
	definition  goto 139
	enum_type  goto 11
	type_dcl  goto 3
	union_type  goto 10
	const_dcl  goto 4
	struct_type  goto 9
	except_dcl  goto 5
	module  goto 7

state 97
	struct_type :  xSTRUCT xIDENTIFIER {_member_list } 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xENUM  shift 19
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSEQUENCE  shift 58
	xSHORT  shift 65
	xSTRING  shift 59
	xSTRUCT  shift 17
	xUNSIGNED  shift 66
	xUNION  shift 18
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 32
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	enum_type  goto 37
	constr_type_spec  goto 31
	simple_type_spec  goto 30
	type_spec  goto 137
	member  goto 136
	member_list  goto 140
	scoped_name  goto 34
	string_type  goto 46
	union_type  goto 36
	struct_type  goto 35
	sequence_type  goto 45
	template_type_spec  goto 33

state 98
	union_type :  xUNION xIDENTIFIER xSWITCH_( switch_type_spec ) { switch_body } 

	(  shift 141
	.  error


state 99
	enum_type :  xENUM xIDENTIFIER {_aux_4 } 

	xIDENTIFIER  shift 144
	.  error

	aux_4  goto 142
	enumerator  goto 143

state 100
	interface_dcl :  interface_header { interface_body_} 
	interface_body :  interface_body_export 

	xANY  shift 56
	xATTRIBUTE  shift 152
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xCONST  shift 12
	xDOUBLE  shift 50
	xENUM  shift 19
	xEXCEPTION  shift 13
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xONEWAY  shift 158
	xREADONLY  shift 153
	xSHORT  shift 65
	xSTRING  shift 59
	xSTRUCT  shift 17
	xTYPEDEF  shift 8
	xUNSIGNED  shift 66
	xUNION  shift 18
	xVOID  shift 157
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	}  shift 145
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 159
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	op_attribute  goto 155
	object_type  goto 44
	param_type_spec  goto 156
	attr_dcl  goto 150
	export  goto 146
	op_type_spec  goto 154
	enum_type  goto 11
	type_dcl  goto 147
	op_dcl  goto 151
	scoped_name  goto 161
	string_type  goto 160
	union_type  goto 10
	const_dcl  goto 148
	struct_type  goto 9
	except_dcl  goto 149

state 101
	interface_header :  xINTERFACE xIDENTIFIER inheritance_spec_    (16)

	.  reduce 16


state 102
	inheritance_spec :  :_aux_1 

	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	scoped_name  goto 163
	aux_1  goto 162

state 103
	aux_2 :  aux_2 ,_declarator 

	xIDENTIFIER  shift 86
	.  error

	simple_declarator  goto 84
	declarator  goto 164
	array_declarator  goto 87
	complex_declarator  goto 85

state 104
	array_declarator :  xIDENTIFIER aux_5_    (142)
	aux_5 :  aux_5_fixed_array_size 

	[  shift 106
	.  reduce 142

	fixed_array_size  goto 165

state 105
	aux_5 :  fixed_array_size_    (143)

	.  reduce 143


state 106
	fixed_array_size :  [_positive_int_const ] 

	xFALSE  shift 132
	xTRUE  shift 131
	DOUBLE_COLON  shift 48
	FLOATING_PT_LITERAL  shift 129
	CHARACTER_LITERAL  shift 128
	STRING_LITERAL  shift 127
	INTEGER_LITERAL  shift 126
	xIDENTIFIER  shift 47
	-  shift 120
	+  shift 121
	~  shift 122
	(  shift 125
	.  error

	unary_operator  goto 118
	scoped_name  goto 123
	primary_expr  goto 119
	literal  goto 124
	const_exp  goto 110
	or_expr  goto 111
	xor_expr  goto 112
	and_expr  goto 113
	shift_expr  goto 114
	add_expr  goto 115
	mult_expr  goto 116
	unary_expr  goto 117
	positive_int_const  goto 166
	boolean_literal  goto 130

state 107
	scoped_name :  scoped_name DOUBLE_COLON xIDENTIFIER_    (29)

	.  reduce 29


state 108
	sequence_type :  xSEQUENCE < simple_type_spec_, positive_int_const > 
	sequence_type :  xSEQUENCE < simple_type_spec_> 

	,  shift 167
	>  shift 168
	.  error


state 109
	string_type :  xSTRING < positive_int_const_> 

	>  shift 169
	.  error


state 110
	positive_int_const :  const_exp_    (69)

	.  reduce 69


state 111
	const_exp :  or_expr_    (37)
	or_expr :  or_expr_| xor_expr 

	|  shift 170
	.  reduce 37


state 112
	or_expr :  xor_expr_    (38)
	xor_expr :  xor_expr_^ and_expr 

	^  shift 171
	.  reduce 38


state 113
	xor_expr :  and_expr_    (40)
	and_expr :  and_expr_& shift_expr 

	&  shift 172
	.  reduce 40


state 114
	and_expr :  shift_expr_    (42)
	shift_expr :  shift_expr_DOUBLE_GT add_expr 
	shift_expr :  shift_expr_DOUBLE_LT add_expr 

	DOUBLE_LT  shift 174
	DOUBLE_GT  shift 173
	.  reduce 42


state 115
	shift_expr :  add_expr_    (44)
	add_expr :  add_expr_+ mult_expr 
	add_expr :  add_expr_- mult_expr 

	-  shift 176
	+  shift 175
	.  reduce 44


state 116
	add_expr :  mult_expr_    (47)
	mult_expr :  mult_expr_* unary_expr 
	mult_expr :  mult_expr_/ unary_expr 
	mult_expr :  mult_expr_% unary_expr 

	*  shift 177
	/  shift 178
	%  shift 179
	.  reduce 47


state 117
	mult_expr :  unary_expr_    (50)

	.  reduce 50


state 118
	unary_expr :  unary_operator_primary_expr 

	xFALSE  shift 132
	xTRUE  shift 131
	DOUBLE_COLON  shift 48
	FLOATING_PT_LITERAL  shift 129
	CHARACTER_LITERAL  shift 128
	STRING_LITERAL  shift 127
	INTEGER_LITERAL  shift 126
	xIDENTIFIER  shift 47
	(  shift 125
	.  error

	scoped_name  goto 123
	primary_expr  goto 180
	literal  goto 124
	boolean_literal  goto 130

state 119
	unary_expr :  primary_expr_    (55)

	.  reduce 55


state 120
	unary_operator :  -_    (56)

	.  reduce 56


state 121
	unary_operator :  +_    (57)

	.  reduce 57


state 122
	unary_operator :  ~_    (58)

	.  reduce 58


state 123
	scoped_name :  scoped_name_DOUBLE_COLON xIDENTIFIER 
	primary_expr :  scoped_name_    (59)

	DOUBLE_COLON  shift 88
	.  reduce 59


state 124
	primary_expr :  literal_    (60)

	.  reduce 60


state 125
	primary_expr :  (_const_exp ) 

	xFALSE  shift 132
	xTRUE  shift 131
	DOUBLE_COLON  shift 48
	FLOATING_PT_LITERAL  shift 129
	CHARACTER_LITERAL  shift 128
	STRING_LITERAL  shift 127
	INTEGER_LITERAL  shift 126
	xIDENTIFIER  shift 47
	-  shift 120
	+  shift 121
	~  shift 122
	(  shift 125
	.  error

	unary_operator  goto 118
	scoped_name  goto 123
	primary_expr  goto 119
	literal  goto 124
	const_exp  goto 181
	or_expr  goto 111
	xor_expr  goto 112
	and_expr  goto 113
	shift_expr  goto 114
	add_expr  goto 115
	mult_expr  goto 116
	unary_expr  goto 117
	boolean_literal  goto 130

state 126
	literal :  INTEGER_LITERAL_    (62)

	.  reduce 62


state 127
	literal :  STRING_LITERAL_    (63)

	.  reduce 63


state 128
	literal :  CHARACTER_LITERAL_    (64)

	.  reduce 64


state 129
	literal :  FLOATING_PT_LITERAL_    (65)

	.  reduce 65


state 130
	literal :  boolean_literal_    (66)

	.  reduce 66


state 131
	boolean_literal :  xTRUE_    (67)

	.  reduce 67


state 132
	boolean_literal :  xFALSE_    (68)

	.  reduce 68


state 133
	const_dcl :  xCONST const_type xIDENTIFIER =_const_exp 

	xFALSE  shift 132
	xTRUE  shift 131
	DOUBLE_COLON  shift 48
	FLOATING_PT_LITERAL  shift 129
	CHARACTER_LITERAL  shift 128
	STRING_LITERAL  shift 127
	INTEGER_LITERAL  shift 126
	xIDENTIFIER  shift 47
	-  shift 120
	+  shift 121
	~  shift 122
	(  shift 125
	.  error

	unary_operator  goto 118
	scoped_name  goto 123
	primary_expr  goto 119
	literal  goto 124
	const_exp  goto 182
	or_expr  goto 111
	xor_expr  goto 112
	and_expr  goto 113
	shift_expr  goto 114
	add_expr  goto 115
	mult_expr  goto 116
	unary_expr  goto 117
	boolean_literal  goto 130

state 134
	except_dcl :  xEXCEPTION xIDENTIFIER { }_    (150)

	.  reduce 150


state 135
	member_list :  member_list_member 
	except_dcl :  xEXCEPTION xIDENTIFIER { member_list_} 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xENUM  shift 19
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSEQUENCE  shift 58
	xSHORT  shift 65
	xSTRING  shift 59
	xSTRUCT  shift 17
	xUNSIGNED  shift 66
	xUNION  shift 18
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	}  shift 184
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 32
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	enum_type  goto 37
	constr_type_spec  goto 31
	simple_type_spec  goto 30
	type_spec  goto 137
	member  goto 183
	scoped_name  goto 34
	string_type  goto 46
	union_type  goto 36
	struct_type  goto 35
	sequence_type  goto 45
	template_type_spec  goto 33

state 136
	member_list :  member_    (117)

	.  reduce 117


state 137
	member :  type_spec_declarators ; 

	xIDENTIFIER  shift 86
	.  error

	simple_declarator  goto 84
	declarator  goto 83
	declarators  goto 185
	aux_2  goto 82
	array_declarator  goto 87
	complex_declarator  goto 85

state 138
	module :  xMODULE xIDENTIFIER { aux_11_} 
	aux_11 :  aux_11_definition 

	xCONST  shift 12
	xENUM  shift 19
	xEXCEPTION  shift 13
	xINTERFACE  shift 21
	xMODULE  shift 16
	xSTRUCT  shift 17
	xTYPEDEF  shift 8
	xUNION  shift 18
	}  shift 186
	.  error

	interface_header  goto 20
	interface_dcl  goto 14
	forward_dcl  goto 15
	interface  goto 6
	definition  goto 187
	enum_type  goto 11
	type_dcl  goto 3
	union_type  goto 10
	const_dcl  goto 4
	struct_type  goto 9
	except_dcl  goto 5
	module  goto 7

state 139
	aux_11 :  definition_    (9)

	.  reduce 9


state 140
	struct_type :  xSTRUCT xIDENTIFIER { member_list_} 
	member_list :  member_list_member 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xENUM  shift 19
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSEQUENCE  shift 58
	xSHORT  shift 65
	xSTRING  shift 59
	xSTRUCT  shift 17
	xUNSIGNED  shift 66
	xUNION  shift 18
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	}  shift 188
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 32
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	enum_type  goto 37
	constr_type_spec  goto 31
	simple_type_spec  goto 30
	type_spec  goto 137
	member  goto 183
	scoped_name  goto 34
	string_type  goto 46
	union_type  goto 36
	struct_type  goto 35
	sequence_type  goto 45
	template_type_spec  goto 33

state 141
	union_type :  xUNION xIDENTIFIER xSWITCH (_switch_type_spec ) { switch_body } 

	xBOOLEAN  shift 54
	xCHAR  shift 53
	xENUM  shift 19
	xLONG  shift 64
	xSHORT  shift 65
	xUNSIGNED  shift 66
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 190
	char_type  goto 191
	boolean_type  goto 192
	enum_type  goto 193
	scoped_name  goto 194
	switch_type_spec  goto 189

state 142
	enum_type :  xENUM xIDENTIFIER { aux_4_} 
	aux_4 :  aux_4_, enumerator 

	}  shift 195
	,  shift 196
	.  error


state 143
	aux_4 :  enumerator_    (135)

	.  reduce 135


state 144
	enumerator :  xIDENTIFIER_    (137)

	.  reduce 137


state 145
	interface_dcl :  interface_header { interface_body }_    (13)

	.  reduce 13


state 146
	interface_body :  interface_body export_    (18)

	.  reduce 18


state 147
	export :  type_dcl_; 

	;  shift 197
	.  error


state 148
	export :  const_dcl_; 

	;  shift 198
	.  error


state 149
	export :  except_dcl_; 

	;  shift 199
	.  error


state 150
	export :  attr_dcl_; 

	;  shift 200
	.  error


state 151
	export :  op_dcl_; 

	;  shift 201
	.  error


state 152
	attr_dcl :  xATTRIBUTE_param_type_spec aux_6 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSHORT  shift 65
	xSTRING  shift 59
	xUNSIGNED  shift 66
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error

	signed_short_int  goto 61
	signed_long_int  goto 60
	signed_int  goto 51
	unsigned_int  goto 52
	unsigned_long_int  goto 62
	unsigned_short_int  goto 63
	integer_type  goto 39
	floating_pt_type  goto 38
	base_type_spec  goto 159
	char_type  goto 40
	boolean_type  goto 41
	octet_type  goto 42
	any_type  goto 43
	object_type  goto 44
	param_type_spec  goto 202
	scoped_name  goto 161
	string_type  goto 160

state 153
	attr_dcl :  xREADONLY_xATTRIBUTE param_type_spec aux_6 

	xATTRIBUTE  shift 203
	.  error


state 154
	op_dcl :  op_type_spec_xIDENTIFIER parameter_dcls 
	op_dcl :  op_type_spec_xIDENTIFIER parameter_dcls raises_expr 
	op_dcl :  op_type_spec_xIDENTIFIER parameter_dcls context_expr 
	op_dcl :  op_type_spec_xIDENTIFIER parameter_dcls raises_expr context_expr 

	xIDENTIFIER  shift 204
	.  error


state 155
	op_dcl :  op_attribute_op_type_spec xIDENTIFIER parameter_dcls 
	op_dcl :  op_attribute_op_type_spec xIDENTIFIER parameter_dcls raises_expr 
	op_dcl :  op_attribute_op_type_spec xIDENTIFIER parameter_dcls context_expr 
	op_dcl :  op_attribute_op_type_spec xIDENTIFIER parameter_dcls raises_expr context_expr 

	xANY  shift 56
	xBOOLEAN  shift 54
	xCHAR  shift 53
	xDOUBLE  shift 50
	xFLOAT  shift 49
	xLONG  shift 64
	xOBJECT  shift 57
	xOCTET  shift 55
	xSHORT  shift 65
	xSTRING  shift 59
	xUNSIGNED  shift 66
	xVOID  shift 157
	DOUBLE_COLON  shift 48
	xIDENTIFIER  shift 47
	.  error
